// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`News component News component initial Render properly 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-12 d-flex"
    >
      <div
        className="shadow-box shadow-box_round-big"
      >
        <div
          className="shadow-box__inner d-flex flex-column"
        >
          <section
            className="news"
          >
            <div
              className="row"
            >
              <div
                className="col"
              >
                <h2
                  className="block__header"
                >
                  News
                </h2>
                <p
                  className="news__empty"
                >
                  No news
                </p>
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`News component News component isLoading Render properly 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-12 d-flex"
    >
      <div
        className="shadow-box shadow-box_round-big"
      >
        <div
          className="shadow-box__inner d-flex flex-column"
        >
          <section
            className="news"
          >
            <div
              className="row"
            >
              <div
                className="col"
              >
                <h2
                  className="block__header"
                >
                  News
                </h2>
                <div
                  className="d-flex justify-content-center"
                >
                  <Spinner />
                </div>
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`News component News component render <ArticlesList /> Render properly 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-12 d-flex"
    >
      <div
        className="shadow-box shadow-box_round-big"
      >
        <div
          className="shadow-box__inner d-flex flex-column"
        >
          <section
            className="news"
          >
            <div
              className="row"
            >
              <div
                className="col"
              >
                <h2
                  className="block__header"
                >
                  News
                </h2>
                <ArticlesList
                  data={
                    Array [
                      Object {
                        "id": "2688074",
                      },
                      Object {
                        "id": "2687983",
                      },
                      Object {
                        "id": "2687985",
                      },
                    ]
                  }
                />
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`News component News component with errorMessage Render properly 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-12 d-flex"
    >
      <div
        className="shadow-box shadow-box_round-big"
      >
        <div
          className="shadow-box__inner d-flex flex-column"
        >
          <section
            className="news"
          >
            <div
              className="row"
            >
              <div
                className="col"
              >
                <h2
                  className="block__header"
                >
                  News
                </h2>
                <div
                  className="news__error"
                >
                  Path does not exist
                </div>
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
</div>
`;
